--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://github.com/lindagtz/lindatest.git'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme: PaperMod
+theme = PaperMod
